feat: html e css da tela de login, finalizados.

--- a/tela-de-login.css
+++ b/tela-de-login.css
@@ -3,10 +3,14 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
 }
 
+/* Aqui estamos importando a font do google */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 h1 {
-    color: #1E60FA;
+    color: #0b41be;
     font-size: 42px;
 }
 
@@ -17,6 +21,9 @@ h1 {
     margin-top: 80px;
     padding: 25px;
     text-align: center;
+    display: table;
+    padding-top: 5px;
+    border-radius: 8px;
 }
 
 input {
@@ -27,20 +34,35 @@ input {
 }
 
 input:focus {
-    border: 2px solid #1E60FA;
+    border: 2px solid #0b41be;
 }
 
 button{
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     margin-top: 10px;
-    background-color: #1E60FA;
+    background-color: #0b41be;
     border: none;
     color: white;
     outline: none;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #0A37A2;
 }
 
 .grupo {
     text-align: start;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #0b41be;
+    float: right;
 }
